Galleon
-------

Version 2.5.6:
----------------------

Version 2.5.5:
----------------------
* added java parameter to favor IPv4 (should eliminate the need for disabling
  IPv6 on linux installs)
* added runlevel 2 to linux Makefile (for distros that use update-rc.d)
* fixed Movies app so it works again (2570997, 2604157, 2604159)
* Cleaned up some incorrect error messages in JmDNS code
* Removed auto-subdirectory publish, the bug in TiVo-side software is fixed.
* various minor ToGo fixes and enhancements:
  - corrected space remaining calculation 
  - added blue ball icon to identify Suggestions
  - properly display recording quality, added [HD], DIGITAL, and UNKNOWN types
  - fixed channel/station display issue
  - show copy-protected recordings (to be consistent with TiVo Desktop and other
    Now Playing List applications); identify with lock icon
  - fixed display of Length statistic on main Now Playing screen
* Updated GoBack announcements to TiVos to use Bonjour, eliminating the
  repackaging and use of TiVo Beacon service on Windows.

Version 2.5.4:
----------------------
* Fix ToGo looping bug on null recording date (1811137)
* Added user-selectable range for local radar image (100, 300, 600 miles) in Weather
* auto-subdirectory publishing for GoBack, avoids the need to do it yourself
  and also avoids bugs in TiVo folder navigation in older TiVo service
  releases (Series 3 and HD should be OK without this).
  (Probably needs some work to handle DOS shortcuts; should be OK on
  UNIX and OS X.)

* XML parsing of recording meta-data for non-Galleon-created video files
  in GoBack areas.  e.g. if you post-process .TiVo files into .mpg, just
  put the XML output containing the show details, in the same format as
  it comes from the TiVo, into a .xml file with the same prefix.  If you
  use tivodecode to unwrap .TiVo files, the metadata are in the
  -02-0002.xml file generated with the -D (dump-metadata) option.
